--- a/demo-jpa/src/main/resources/static/login.html
+++ b/demo-jpa/src/main/resources/static/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h2>自定义登录页面</h2>
-<form action="/login"  method="post">
+<form action="/login.html"  method="post">
     <table>
         <tr>
             <td>用户名：</td>
